Reestructuración del modelo de datos y módulos del backend
- Fusión de administradores y empleados en entidad Usuario con rol
- Login por usuario con JWT e interceptor de seguridad
- CRUD completo: Cliente, Usuario, Nivel, Premio, Tarjeta
- Lógica de Transacciones (puntos) y Canjes (validación de saldo)
- Tarjeta automática al registrar cliente
- Endpoint de Dashboard con métricas