@@ -3,75 +3,78 @@ package com.hvb.loyalty.service;
 import com.hvb.loyalty.dto.ClienteRequestDTO;
 import com.hvb.loyalty.dto.ClienteResponseDTO;
 import com.hvb.loyalty.entity.Cliente;
-import com.hvb.loyalty.entity.Tarjeta;
 import com.hvb.loyalty.repository.ClienteRepository;
 import com.hvb.loyalty.utils.ClienteUtil;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ClienteService {
 
     private final ClienteRepository clienteRepository;
+    private final TarjetaService tarjetaService;
 
-    public ClienteService(ClienteRepository clienteRepository) {
+    public ClienteService(ClienteRepository clienteRepository, TarjetaService tarjetaService) {
         this.clienteRepository = clienteRepository;
+        this.tarjetaService = tarjetaService;
     }
 
     public List<ClienteResponseDTO> listar() {
-        return clienteRepository.findAll().stream().map(ClienteUtil::toResponse).toList();
+        return clienteRepository.findAll().stream()
+                .map(this::aResponse)
+                .collect(Collectors.toList());
     }
 
-    public ClienteResponseDTO obtener(Long id) {
-        Cliente c = clienteRepository.findById(id)
+    public ClienteResponseDTO obtenerPorId(Long id) {
+        Cliente cliente = clienteRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Cliente no encontrado"));
-        return ClienteUtil.toResponse(c);
+        return aResponse(cliente);
     }
 
     public ClienteResponseDTO crear(ClienteRequestDTO dto) {
-        if (clienteRepository.existsByCorreo(dto.getCorreo()))
-            throw new RuntimeException("Ya existe un cliente con ese correo");
+        if (clienteRepository.existsByTelefono(dto.getTelefono())) {
+            throw new RuntimeException("Ya existe un cliente con ese teléfono");
+        }
+        Cliente cliente = new Cliente();
+        ClienteUtil.actualizarDatos(cliente, dto);
+        Cliente guardado = clienteRepository.save(cliente);
 
-        Cliente c = new Cliente();
-        c.setNombre(dto.getNombre());
-        c.setCorreo(dto.getCorreo());
-        c.setTelefono(dto.getTelefono());
+        // Crea automáticamente la tarjeta del cliente
+        tarjetaService.crearParaCliente(guardado);
 
-        // Se crea su tarjeta digital automáticamente
-        Tarjeta tarjeta = new Tarjeta();
-        tarjeta.setCliente(c);
-        c.setTarjeta(tarjeta);
-
-        return ClienteUtil.toResponse(clienteRepository.save(c));
+        return aResponse(guardado);
     }
 
     public ClienteResponseDTO actualizar(Long id, ClienteRequestDTO dto) {
-        Cliente c = clienteRepository.findById(id)
+        Cliente cliente = clienteRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Cliente no encontrado"));
 
-        if (!c.getCorreo().equals(dto.getCorreo()) && clienteRepository.existsByCorreo(dto.getCorreo()))
-            throw new RuntimeException("Ya existe un cliente con ese correo");
+        if (!cliente.getTelefono().equals(dto.getTelefono())
+                && clienteRepository.existsByTelefono(dto.getTelefono())) {
+            throw new RuntimeException("Ya existe un cliente con ese teléfono");
+        }
 
-        c.setNombre(dto.getNombre());
-        c.setCorreo(dto.getCorreo());
-        c.setTelefono(dto.getTelefono());
-        return ClienteUtil.toResponse(clienteRepository.save(c));
+        ClienteUtil.actualizarDatos(cliente, dto);
+        return aResponse(clienteRepository.save(cliente));
     }
 
-    public ClienteResponseDTO reiniciarPuntos(Long id) {
-        Cliente c = clienteRepository.findById(id)
+    public void eliminar(Long id) {
+        Cliente cliente = clienteRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Cliente no encontrado"));
-        c.setPuntos(0);
-        c.setFechaUltimoReinicio(LocalDateTime.now());
-        return ClienteUtil.toResponse(clienteRepository.save(c));
+        clienteRepository.delete(cliente);
     }
 
-    public ClienteResponseDTO cambiarEstado(Long id) {
-        Cliente c = clienteRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Cliente no encontrado"));
-        c.setActivo(!c.getActivo());
-        return ClienteUtil.toResponse(clienteRepository.save(c));
+    private ClienteResponseDTO aResponse(Cliente c) {
+        ClienteResponseDTO dto = new ClienteResponseDTO();
+        dto.setId(c.getId());
+        dto.setNombre(c.getNombre());
+        dto.setApellidos(c.getApellidos());
+        dto.setTelefono(c.getTelefono());
+        dto.setCorreo(c.getCorreo());
+        dto.setFechaRegistro(c.getFechaRegistro());
+        dto.setActivo(c.getActivo());
+        return dto;
     }
 }
